<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#050505"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/signText"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="textEnd"
        android:textColor="#605F5F"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/prevText"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="textEnd"
        android:textColor="#605F5F"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/currentText"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="textEnd"
        android:textColor="#F1F1F1"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="411dp"
        android:layout_height="529dp"
        android:layout_marginTop="89dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentText">

        <TableLayout
            android:id="@+id/buttonLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/clearButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="#A5A5A5"
                    android:text="@string/c"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D" />

                <Button
                    android:id="@+id/changeSignButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="#A5A5A5"
                    android:text="@string/_changeSign"
                    android:textColor="#000"
                    android:textSize="20sp"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D" />

                <Button
                    android:id="@+id/percentButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="#A5A5A5"
                    android:text="@string/_percent"
                    android:textColor="#000"
                    android:textSize="20sp"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D" />

                <Button
                    android:id="@+id/divisionButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="#FF9702"
                    android:text="@string/_division"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/sevenButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="#323232"
                    android:text="@string/_7"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D" />

                <Button
                    android:id="@+id/eightButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="#323232"
                    android:text="@string/_8"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D" />

                <Button
                    android:id="@+id/nineButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="#323232"
                    android:text="@string/_9"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D" />

                <Button
                    android:id="@+id/multipleButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="#FF9702"
                    android:text="@string/_multiple"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/fourButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="#323232"
                    android:text="@string/_4"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D" />

                <Button
                    android:id="@+id/fiveButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="#323232"
                    android:text="@string/_5"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D" />

                <Button
                    android:id="@+id/sixButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="#323232"
                    android:text="@string/_6"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D" />

                <Button
                    android:id="@+id/minusButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="#FF9702"
                    android:text="@string/_minus"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/oneButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="#323232"
                    android:text="@string/_1"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D" />

                <Button
                    android:id="@+id/twoButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="#323232"
                    android:text="@string/_2"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D" />

                <Button
                    android:id="@+id/threeButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="#323232"
                    android:text="@string/_3"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D" />

                <Button
                    android:id="@+id/plusButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="#FF9702"
                    android:text="@string/_plus"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/zeroButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="#323232"
                    android:text="@string/_0"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D" />

                <Button
                    android:id="@+id/zeroButton2"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/_0invisible"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    android:visibility="invisible"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D"
                    tools:visibility="invisible" />

                <Button
                    android:id="@+id/commaButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="#323232"
                    android:text="@string/_dot"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D" />

                <Button
                    android:id="@+id/equalButton"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="75dp"
                    android:layout_height="85dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="#FF9702"
                    android:text="@string/_equal"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    app:cornerRadius="80dp"
                    app:rippleColor="#605D5D" />
            </TableRow>
        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>